hanlp配置文件更新-2023.02.28-02

--- a/src/main/resources/hanlp.properties
+++ b/src/main/resources/hanlp.properties
@@ -8,7 +8,7 @@ root=D:/mjl_work/workspace/pi
 #\u597D\u4E86\uFF0C\u4EE5\u4E0A\u4E3A\u552F\u4E00\u9700\u8981\u4FEE\u6539\u7684\u90E8\u5206\uFF0C\u4EE5\u4E0B\u914D\u7F6E\u9879\u6309\u9700\u53CD\u6CE8\u91CA\u7F16\u8F91\u3002
 
 #\u6838\u5FC3\u8BCD\u5178\u8DEF\u5F84
-#CoreDictionaryPath=data/dictionary/CoreNatureDictionary.txt
+CoreDictionaryPath=data/dictionary/CoreNatureDictionary.txt
 #2\u5143\u8BED\u6CD5\u8BCD\u5178\u8DEF\u5F84
 #BiGramDictionaryPath=data/dictionary/CoreNatureDictionary.ngram.txt
 #\u81EA\u5B9A\u4E49\u8BCD\u5178\u8DEF\u5F84\uFF0C\u7528;\u9694\u5F00\u591A\u4E2A\u81EA\u5B9A\u4E49\u8BCD\u5178\uFF0C\u7A7A\u683C\u5F00\u5934\u8868\u793A\u5728\u540C\u4E00\u4E2A\u76EE\u5F55\uFF0C\u4F7F\u7528\u201C\u6587\u4EF6\u540D \u8BCD\u6027\u201D\u5F62\u5F0F\u5219\u8868\u793A\u8FD9\u4E2A\u8BCD\u5178\u7684\u8BCD\u6027\u9ED8\u8BA4\u662F\u8BE5\u8BCD\u6027\u3002\u4F18\u5148\u7EA7\u9012\u51CF\u3002
